[workspace]
resolver = "2"
members = [ "pdcp-sim",
    "rasn-compiler",
    "rasn-compiler-derive",
    "rasn-compiler-tests",
    "rasn-compiler/internal-macros"
]

[workspace.dependencies]
rasn = "0.27.0"

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT/Apache-2.0"
version = "0.14.2"
repository = "https://github.com/librasn/compiler.git"
homepage = "https://librasn.github.io/"
